create CardDetails components

--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -28,3 +28,7 @@ $radius: 10px;
   white-space: normal;
   height: auto;
 }
+
+.btn {
+  box-shadow: 1px 3px 9px rgba($color: #000000, $alpha: 0.25);
+}
